# Projet-Dealer-Report

./: .gitignore  GITHUB_ACTIONS_SETUP.md  Images - Raccourci.lnk  README.md  README_LANCEMENT.md  analyze_js_bundle.py  analyze_live_api.py  analyze_spider_vision.py  debug_auth.py  debug_page.html  debug_token.py  find_api_endpoint.py  fix_and_generate.py  generate_corrected_report.py  generate_current_data.py  generate_dashboard_style_report.py  generate_full_html_report.py  generate_last_day_report.py  generate_new_report.py  generate_rapport_now.py  generate_report_now.py  generate_report_scraping.py  generate_report_selenium.py  get_real_data.py  index.html  lance_un_rapport.py  lancer_rapport.bat  lancer_rapport_powershell.ps1  pyproject.toml  requirements.txt  scrape_history.py  setup_env.bat  setup_test.py  simple_test.py  test_api_response.py  test_connection.py  test_corrected_report.py  test_correction_total.py  test_dashboard_data.py  test_filtered_report.py  (+14 more)
.circleci/: config.yml
.docker/: Dockerfile
cli/: __init__.py  cli.py
db/: schema.sql  seed_data.sql
docs/: DOCUMENTATION_COMPLETE.md  README.md  README_LANCEMENT.md
reports/: last_day_history_live_report.html  last_day_history_live_report_20250930_103145.html  last_day_history_live_report_20250930_104141.html  last_day_history_live_report_20250930_133229.html  last_day_history_live_report_20250930_133855.html  last_day_history_live_report_20250930_134906.html  last_day_history_live_report_20250930_140153.html  last_day_history_live_report_20250930_140237.html  spider_vision_overview_current.csv  (+18 more)
(+23 files in other folders)
